--- a/mappings-yml/Genre.dcm.yml
+++ b/mappings-yml/Genre.dcm.yml
@@ -1,6 +1,10 @@
 Genre:
     type: entity
     table: genres
+    oneToMany:
+        film:
+            targetEntity: film
+            mappedBy: genre
     id:
         idGenre:
             type: integer
