[DOC] write more documentation in readme on how to setup doctrine

--- a/mappings-yml/Distributeur.dcm.yml
+++ b/mappings-yml/Distributeur.dcm.yml
@@ -2,7 +2,7 @@ Distributeur:
     type: entity
     table: distributeurs
     oneToMany:
-        film:
+        films:
             targetEntity: film
             mappedBy: distributeur
     id:
